--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-native-camera": "git+https://git@github.com/react-native-community/react-native-camera.git",
     "react-native-elements": "^1.1.0",
     "react-native-gesture-handler": "^1.1.0",
+    "react-native-modal-datetime-picker": "^7.4.0",
     "react-native-vector-icons": "^6.4.2",
     "react-navigation": "^3.9.0"
   },
