--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "react-native": "0.59.5",
     "react-native-camera": "git+https://git@github.com/react-native-community/react-native-camera.git",
     "react-native-elements": "^1.1.0",
+    "react-native-geocoding": "^0.3.0",
     "react-native-gesture-handler": "^1.1.0",
+    "react-native-maps": "^0.24.2",
+    "react-native-material-dropdown": "^0.11.1",
     "react-native-modal-datetime-picker": "^7.4.0",
     "react-native-vector-icons": "^6.4.2",
     "react-navigation": "^3.9.0"
